# sever

./: CMakeLists.txt
src/: main.cpp  qfaceobject.cpp  qfaceobject.h  register.cpp  register.h  register.ui  seetfacesever.cpp  seetfacesever.h  seetfacesever.ui
